# poc-ikan

./: .gitignore  README.md  app.py  cam_test.py  main.py  pyproject.toml  yolo_detect.py
my_model/train2/: args.yaml  results.csv
poc_ikan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: index.html
